# ChangeLog for games-mud/tintin
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-mud/tintin/ChangeLog,v 1.80 2009/10/10 15:31:57 armin76 Exp $

  10 Oct 2009; Raúl Porcel <armin76@gentoo.org> tintin-1.99.7.ebuild:
  sparc stable wrt #287254

  03 Oct 2009; Markus Meier <maekke@gentoo.org> tintin-1.99.7.ebuild:
  amd64/x86 stable, bug #287254

*tintin-1.99.7 (30 Aug 2009)

  30 Aug 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +tintin-1.99.7.ebuild:
  version bump

*tintin-1.99.6 (22 Jun 2009)

  22 Jun 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +tintin-1.99.6.ebuild:
  version bump

*tintin-1.99.5 (16 May 2009)

  16 May 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +tintin-1.99.5.ebuild:
  version bump

*tintin-1.99.4 (13 Apr 2009)

  13 Apr 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +tintin-1.99.4.ebuild:
  version bump

*tintin-1.99.3 (31 Mar 2009)

  31 Mar 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +tintin-1.99.3.ebuild:
  version bump

*tintin-1.99.2 (09 Mar 2009)

  09 Mar 2009; Michael Sterrett <mr_bones_@gentoo.org>
  -tintin-1.99.1.ebuild, +tintin-1.99.2.ebuild:
  version bump

*tintin-1.99.1 (02 Mar 2009)

  02 Mar 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +tintin-1.99.1.ebuild:
  version bump

*tintin-1.99.0 (16 Feb 2009)

  16 Feb 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +tintin-1.99.0.ebuild:
  version bump

*tintin-1.98.9 (29 Jan 2009)

  29 Jan 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +tintin-1.98.9.ebuild:
  version bump

*tintin-1.98.8 (11 Jan 2009)

  11 Jan 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +tintin-1.98.8.ebuild:
  version bump

*tintin-1.98.6 (23 Oct 2008)

  23 Oct 2008; Michael Sterrett <mr_bones_@gentoo.org>
  +tintin-1.98.6.ebuild:
  version bump

*tintin-1.98.5 (01 Sep 2008)

  01 Sep 2008; Michael Sterrett <mr_bones_@gentoo.org>
  +tintin-1.98.5.ebuild:
  version bump

*tintin-1.98.4 (11 Aug 2008)
