@@ -1,6 +1,8 @@
 DIST tintin-1.98.2.tar.gz 230125 RMD160 906bd2d9e24aca1bc9a91ce0f7c08174762e1d3b SHA1 44118c3ca0b9513908b10121f15ec5f305bc16a3 SHA256 a6a575ebb1e601f1ab159370f8f0b3d042de852f815f9856b8faaca9f55ac2ca
 DIST tintin-1.99.7.tar.gz 235039 RMD160 6f0908b95e6fb8d837db99ebb1b412a17bd5c8fa SHA1 8252a7a9c4f3351d50c0d3da2514d2f33bd497c4 SHA256 acaabe615c7deb7bb4b77a1af3b0d31fdccfac67e815fdfcfbf3588fe2a36d4b
+DIST tintin-1.99.8.tar.gz 235932 RMD160 a4afce64305cff856a9337d5a257f22c8cf5d63b SHA1 8a59535aa16845ff11d1799e6bb9d2ba65fab9bd SHA256 90ce5139b6893f656c0367c97e08eea36fa087fcab36695625d27ca46860a1ac
 EBUILD tintin-1.98.2.ebuild 977 RMD160 77002728670735cf715d4e35667f592d3862809b SHA1 cbb62bb63a5e3d69d275d4f18cf56b8823d70a9f SHA256 ec6c68f64afbdd939f10d834e7f7cc8031cbcde843a06ff811448c5bb2da5f91
 EBUILD tintin-1.99.7.ebuild 858 RMD160 3a01880998b32a017d4d9fa82b6dfee1e481bb10 SHA1 824350c0dc8954f9747331ee1010f081a8a46864 SHA256 9b4185aca9151a204057b5b522cb1cb20622f1275f54db3208606b10c2adb14d
-MISC ChangeLog 10347 RMD160 24a8fb0466c0d4b2ea31eab21f78bac1f3bced88 SHA1 67a2eeb38e5a753ee309a244207850f9581320ed SHA256 0dab272b9c723c888aa6fabcc13b24a0ab957858f03b10071acf2762dce5fcd5
+EBUILD tintin-1.99.8.ebuild 863 RMD160 606cd7780784d5de87c196023db32be942ae64e3 SHA1 7dc69ae3cfdef8bfceed8ff9e45f12d7d73e401f SHA256 0e841c4458cd091e48d70695d2ab3ee17156099210de27f519b6ec850f386a11
+MISC ChangeLog 10475 RMD160 5eda4cd0050b6abcddd4670ebffa36db3bfc8f0a SHA1 b683be444448a30ec902ebb73fdd4de77db6d15d SHA256 e3b47a6967ece962ed92ef3e1c221b7660420b47d0db3b2b2c578704b80b0f66
 MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
