@@ -1,6 +1,12 @@
 # ChangeLog for games-mud/tintin
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-mud/tintin/ChangeLog,v 1.80 2009/10/10 15:31:57 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-mud/tintin/ChangeLog,v 1.81 2009/10/19 04:50:52 mr_bones_ Exp $
+
+*tintin-1.99.8 (19 Oct 2009)
+
+  19 Oct 2009; Michael Sterrett <mr_bones_@gentoo.org>
+  +tintin-1.99.8.ebuild:
+  version bump
 
   10 Oct 2009; Raúl Porcel <armin76@gentoo.org> tintin-1.99.7.ebuild:
   sparc stable wrt #287254
